# dagger

./: .bandit  .bumpversion.cfg  .flake8  .gitignore  .markdownlint.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  docker-compose.yaml  mkdocs.yml  mypy.ini  pyproject.toml  renovate.json  requirements-docs.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  versions.json  wait-for-it.sh
.github/: PULL_REQUEST_TEMPLATE.md  codecov.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.md
.github/workflows/: detect_version_bump.yml  lint.yml  main.yml  publish_release.yml  stale.yml
0.1.0/: 404.html  index.html  objects.inv  sitemap.xml
0.1.0/api/: index.html
0.1.0/development-guide/: index.html
0.1.1/: 404.html  index.html  sitemap.xml
0.1.4/: 404.html  index.html  sitemap.xml
0.1.5/: 404.html  index.html  sitemap.xml
0.1.6/: 404.html  index.html  sitemap.xml
0.1.7/: 404.html  index.html  sitemap.xml
0.1.8/: 404.html  index.html  sitemap.xml
0.1.9/: 404.html  index.html  sitemap.xml
0.2.0/: 404.html  index.html  sitemap.xml
0.2.1/: 404.html  index.html  sitemap.xml
0.2.2/: 404.html  index.html  sitemap.xml
0.2.3/: 404.html  index.html  sitemap.xml
dagger/: __init__.py
dev/: 404.html  index.html  objects.inv  sitemap.xml
docker/: bump_version.sh  dagger.dockerfile  devbox.dockerfile  lock_requirements.sh  run_integration_tests.sh  run_tests.sh
docs/: api.md  development-guide.md  getting-started.md  index.md  why-dagger.md
integration_tests/: test_app.py  test_dagger.py
(+123 files in other folders)
