[metadata]
name = py-dagger
url = https://github.com/wayfair-incubator/dagger
author = Vikram Patki, Aditya Vaderiyettil
author_email = vpatki@wayfair.com
version = 0.1.0
description = Workflow Engine.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License

[options]

python_requires = >=3.7
install_requires =
    faust-streaming
packages = find:

[options.package_data]

dagger = py.typed

[options.packages.find]
exclude = "*.tests", "*.tests.*", "tests.*", "tests"